# udacity-dataeng-project2

./: .gitignore  Pipfile  Project_1B_ Project_Template.ipynb  README.md  etl.ipynb  event_datafile_new.csv  pyproject.toml
