[tool.poetry]
name = "project-2-workspace"
version = "0.1.0"
description = ""
authors = ["Daniel Tavares <daniel.mts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.2"
numpy = "^1.17"
jupyter = "^1.0"
cassandra-driver = "^3.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
